<resources>
    <string name="app_name">My Journal</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">Journal Entries</string>
    <string name="second_fragment_label">New Journal Entry</string>

    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="save_entry">Save Entry</string>
    <string name="hint_entry_title">Enter title</string>
    <string name="hint_entry_content">Write your thoughts here...</string>
    <string name="label_entry_date">Date:</string>
    <string name="no_entries_placeholder">No journal entries yet. Tap the + button to add one!</string>
    <string name="change_date_button">Change Date</string>
    <string name="error_title_empty">Title cannot be empty</string>
    <string name="error_content_empty">Content cannot be empty</string>
    <string name="fab_add_entry_description">Add new journal entry</string>

    <string name="delete_entry_button_text">Delete Entry</string>
    <string name="delete_confirmation_title">Confirm Delete</string>
    <string name="delete_confirmation_message">Are you sure you want to delete this journal entry?</string>
    <string name="confirm_delete">Delete</string>
    <string name="cancel_delete">Cancel</string>
    <string name="entry_deleted_toast">Entry deleted</string>
    <string name="no_entries_icon_description">Icon indicating no journal entries</string>

    <string name="action_toggle_theme">Toggle Theme</string>
    <string name="delete_confirmation_message_format">Are you sure you want to delete \"%1$s\"?</string>
    <string name="add_current_location">Add Current Location</string>
    <string name="no_location_added">No location added.</string>
    <string name="title_new_entry">New Journal Entry</string>
    <string name="title_edit_entry">Edit Journal Entry</string>
    <string name="update_entry_button_text">Update Entry</string>
    <string name="location_permission_denied">Location permission denied.</string>
    <string name="location_permission_not_granted">Permission not granted to fetch location.</string>
    <string name="fetching_location">Fetching location…</string>
    <string name="location_captured">Location captured!</string>
    <string name="could_not_get_location">Could not get current location. Try again.</string>
    <string name="failed_to_get_location_ensure_services">Failed to get current location. Ensure location services are enabled.</string>
    <string name="error_fetching_location">Error fetching location.</string>
    <string name="error_getting_location_message">Error getting location: %1$s</string>
</resources>